manifest/minio/base/minio-route-console.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
spec:
  to:
    kind: Service
    name: minio
  port:
    targetPort: console
  tls:
    termination: edge
